--- a/style.css
+++ b/style.css
@@ -4,3 +4,40 @@
     --bg-color: #52734D;
     --primary-color: #FEFFDE;
 }
+
+body {
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: var(--font-family);
+}
+
+h1 {
+    font-size: 5em;
+    margin-bottom: 20px;
+}
+
+h3 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
+.mensagem {
+    font-size: 1.5em;
+}
+
+.box {
+    font-size: 5em;
+    border: 2px solid var(--primary-color);
+    display: inline-block;
+    margin: 10px;
+    padding: 10px;
+    background-color: #91C788;
+    border-radius: 15px;
+    width: 250px;
+}
