--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ h1 {
     margin-bottom: 20px;
 }
 
+h2 {
+    font-size: 4em;
+    margin-bottom: 20px;
+}
+
 h3 {
     font-size: 2.5em;
     margin-bottom: 20px;
