--- a/style.css
+++ b/style.css
@@ -45,3 +45,16 @@ h3 {
     background-color: #91C788;
     border-radius: 15px;
 }
+
+.btn-jogar {
+    padding: 8px;
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+}
+
+.btn-jogar:hover {
+    background-color: var(--primary-color);
+    color: var(--bg-color);
+}
